# HD-Simulation-Software

./: CHANGELOG.md  LICENSE  README.md
simulator/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.example.yml  pyproject.toml  scenario-pack-template.yaml
simulator/scripts/: release_tools.py  scenario_pack_tools.py
simulator/src/helpdesk_sim/: __init__.py  bootstrap.py  config.py  main.py  utils.py
simulator/src/helpdesk_sim/adapters/: dry_run_gateway.py  gateway.py  knowledge_base.py  zammad_http_gateway.py  zammad_kb_provider.py
simulator/src/helpdesk_sim/api/: routes.py
simulator/src/helpdesk_sim/domain/: models.py
simulator/src/helpdesk_sim/repositories/: sqlite_store.py
simulator/src/helpdesk_sim/services/: background_worker.py  catalog_service.py  coaching_service.py  engine_control_client.py  generation_service.py  god_mode_service.py  grading_service.py  hint_service.py  investigation_service.py  knowledge_matcher_service.py  knowledge_proposal_service.py  knowledge_provider_service.py  knowledge_review_service.py  mentor_service.py  poller_service.py  report_service.py  response_engine.py  (+3 more)
simulator/tests/: test_catalog.py  test_coaching_service.py  test_engine_control_client.py  test_generation_service.py  test_god_mode_service.py  test_grading.py  test_hint_service.py  test_investigation_service.py  test_knowledge_matcher_service.py  test_knowledge_proposal_service.py  test_knowledge_review_service.py  test_mentor_service.py  test_report_service.py  test_response_engine.py  test_wake_on_lan.py  test_zammad_gateway.py
(+19 files in other folders)
